2000-11-24  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>

	* g++.old-dega/g++.pt/ttp62.C: Call abort() on failure.

2000-11-24  Bernd Schmidt  <bernds@redhat.co.uk>

	* gcc.dg/sequence-point-1.c: Add some new tests.
	* gcc.c-torture/execute/20001124-1.c: New test.

2000-11-24  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.other/vaarg4.C: New test.
	* gcc.c-torture/compile/20001123-1.c: New test.

2000-11-24  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.other/crash24.C: Adjust and remove XFAIL.
	* g++.other/crash37.C: New test.

2000-11-23  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.pt/instantiate9.C: New test.

2000-11-22  Mark Mitchell  <mark@codesourcery.com>

	* g++.old-deja/g++.other/decl4.C: Tweak so that it fails with the
	new ABI, too.

	* g++.old-deja/g++.mike/p6610a.C: This test no longer fails.
	* g++.old-deja/g++.robertl/eb55.C: Likewise.

2000-11-22  Neil Booth  <neilb@earthling.net>

	* gcc.dg/cpp/Wtrigraphs.c: New test.

2000-11-22  Loren J. Rittle  <ljrittle@acm.org>

        * g++.old-deja/g++.robertl/eb39.C: Don't include libio.h.

2000-11-22  Jakub Jelinek  <jakub@redhat.com>

	* gcc.c-torture/execute/ieee/20001122-1.c: New test.

2000-11-22  Hans-Peter Nilsson  <hp@bitrange.com>

	* lib/gcc-dg.exp: load_lib scanasm.exp.
	(scan-assembler, scan-assembler-not): Break out to scanasm.exp.
	* lib/g++-dg.exp: load_lib scanasm.exp.
	* lib/scanasm.exp: New.
	(scan-assembler, scan-assembler-not): Add optional arguments to
	test name, or if not present, the pattern name.
	(scan-assembler-dem, scan-assembler-dem-not): New.

	* g++.dg/dg.exp: New.

2000-11-21  Neil Booth  <neilb@earthling.net>

        * gcc.dg/cpp/integrated1.c: Remove.

2000-11-21  Jakub Jelinek  <jakub@redhat.com>

	* gcc.c-torture/execute/20001121-1.c: New test.

2000-11-21  Richard Henderson  <rth@redhat.com>

	* gcc.c-torture/compile/20001121-1.c: New test.

2000-11-20  Neil Booth  <neilb@earthling.net>
